--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ button { cursor: pointer; }
 
 .container {
 	width: 80%;
+	max-width: 1200px;
 	display: flex;
 	background-color: #fefefe;
 	border-radius: 20px;
@@ -104,3 +105,82 @@ ul li:hover {
 /* ul li:nth-child(even) {
 	margin-right: 0;
 } */
+
+/*------------------------------------------------------------------------------
+  MEDIA QUERIES
+------------------------------------------------------------------------------*/
+/* X-Small devices (portrait phones, less than 576px) */
+@media (min-width: 0px) {
+	.container {
+		width: 100%;
+		flex-direction: column;
+		align-items: stretch;
+	}
+
+	.content {
+		padding: 25px 35px;
+	}
+
+	.content.image {
+		width: unset;
+		border-radius: 20px 20px 0 0;
+		min-height: 200px;
+	}
+
+	ul li {
+		float: none;
+		margin: 20px 20px 10px 0;
+		width: unset;
+	}
+}
+
+/* Small devices (landscape phones, 576px and up) */
+/* @media (min-width: 576px) {
+	.container {
+		width: 100%;
+		flex-direction: row;
+	}
+} */
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+	.container {
+		width: 100%;
+		flex-direction: row;
+	}
+
+	.content.image {
+		width: 60%;
+		border-radius: 20px 0 0 20px;
+		min-height: 200px;
+	}
+
+	.content {
+		padding: 30px 50px;
+	}
+
+	ul li {
+		float: left;
+		margin: 20px 20px 20px 0;
+		width: calc((100% - 148px) / 2);
+	}
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+	.container {
+		width: 80%;
+	}
+}
+
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+	.container {
+		width: 60%;
+	}
+}
+
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {
+	
+}
