--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ h2.question {
     font-size: 1rem;
     line-height: 1.5;
     border-radius: .25rem;
+	margin-bottom: 20px;
 }
 
 .btn.btn-info {
@@ -62,7 +63,7 @@ button { cursor: pointer; }
 
 .step {
 	float: right;
-	color: #ccc;
+	color: #444;
 	font-size: .85em;
 }
 
